--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "config": "^3.2.5",
+    "consign": "^0.1.6",
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
   }
