--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "config": "^3.2.5",
     "consign": "^0.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "uuid": "^3.4.0"
   }
 }
